Use ProcessBuilder to construct command
This commit fixes an issue where startSync would fail if there is a
space in the executables' path name.

The representation of options in OptionDescriptor has been simplified
so that exactly one option is represented by one option descriptor.